src/button.css
:root {
  --border-radius: 0.25rem;
  --button-margin: 2px;
}

button {
  text-align: center;
  text-decoration: none;
  margin: var(--button-margin) var(--button-margin);
  border: solid 1px transparent;
  border-radius: var(--border-radius);
  color: var(--color-neutral-100);
  background-color: var(--color-primary-600);
  vertical-align: middle;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.3;
  transition: color var(--transition-time) ease-in-out,
    background-color var(--transition-time) ease-in-out,
    border-color var(--transition-time) ease-in-out,
    box-shadow var(--transition-time) ease-in-out;
}

button[aria-keyshortcuts*="Enter"],
button[type="submit"] {
  background-color: var(--color-primary-800);
}

button:hover {
  outline: 2px;
  background-color: var(--color-primary-500);
}

button:active {
  background-color: var(--color-primary-900);
  cursor: progress;
}

button:disabled {
  background-color: var(--color-primary-300);
  pointer-events: none;
}

button + .failed {
  background-color: var(--color-warn-500);
}

.button-group button {
  float: left;
  margin: var(--button-margin) 0 var(--button-margin) 0;
  border-radius: 0;
}

.button-group button:is(:first-child) {
  border-top-left-radius: var(--border-radius);
  border-bottom-left-radius: var(--border-radius);  
  margin: var(--button-margin) 0 var(--button-margin) var(--button-margin);
}

.button-group button:is(:last-child) {
  border-top-right-radius: var(--border-radius);
  border-bottom-right-radius: var(--border-radius);  
  margin: var(--button-margin) var(--button-margin) var(--button-margin) 0;
}

.spinner {
  --border: 5px;
  --size: 2px;

  opacity: 1;
  display: inline-block;
  vertical-align: baseline;
  border: var(--border) solid var(--color-neutral-100);
  border-top: var(--border) solid var(--color-accent-600);
  border-radius: 100%;
  height: var(--size);
  width: var(--size);
  animation: spin 2s linear infinite;
  margin: 0 0 0 5px;
  padding: var(--size);
  transition: all var(--transition-time) ease;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

